[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piie"
version = "0.1.0"
description = "Privacy Layer for Agentic AI Systems - Detects, manages, and sanitizes PII"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Janvi Singh", email = "janvisingh6211@gmail.com" }
]
keywords = [
    "pii",
    "privacy",
    "gdpr",
    "hipaa",
    "redaction",
    "sanitization",
    "ai-security",
    "mcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "slowapi>=0.1.9",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
server = [
    "supabase>=2.0.0",
    "redis>=5.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
nlp = [
    "spacy>=3.7.0",
    "transformers>=4.36.0",
]
all = [
    "piie[dev,server,mcp,nlp]",
]

[project.scripts]
piisafe = "piie.cli:app"

[project.urls]
Homepage = "https://github.com/janvis11/piie"
Repository = "https://github.com/janvis11/piie"
Documentation = "https://github.com/janvis11/piie/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/piie"]

[tool.hatch.build.targets.sdist]
include = [
    "src/piie/**/*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
